--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
                         <h1 class="hud-main-text" id="score">
                            0
                         </h1>
-                        <h1 class="timer">Timer 0</h1>
+                        <h1 class="timer">Timer <span id ="timerInterval" >60</span></h1>
                     </div>
                     
                 </div>
